--- a/src/app/pages/customer/components/transfers/new-transfer/new-transfer.component.html
+++ b/src/app/pages/customer/components/transfers/new-transfer/new-transfer.component.html
@@ -126,7 +126,7 @@
                 <div class="empty-message">
                   <ion-icon name="people-outline" color="medium"></ion-icon>
                   <p>No tiene beneficiarios registrados</p>
-                  <ion-button fill="outline" size="small" routerLink="/customer/transferencias/beneficiarios/crear">
+                  <ion-button fill="outline" size="small" (click)="goToBeneficiary()">
                     Agregar Beneficiario
                   </ion-button>
                 </div>
